// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Social analysis tasks commit-message-analysis publishes a report on the frequency of words in commit messages: 2016-01-01_2016-01-31_commit-words-data.json 1`] = `
[
  {
    "count": 4,
    "text": "message",
  },
  {
    "count": 2,
    "text": "abc",
  },
  {
    "count": 2,
    "text": "second",
  },
  {
    "count": 2,
    "text": "third",
  },
]
`;

exports[`Social analysis tasks commit-message-analysis publishes a report on the frequency of words in commit messages: 2016-02-01_2016-02-28_commit-words-data.json 1`] = `
[
  {
    "count": 3,
    "text": "message",
  },
  {
    "count": 2,
    "text": "www",
  },
  {
    "count": 2,
    "text": "last",
  },
]
`;

exports[`Social analysis tasks commit-message-analysis publishes a report on the frequency of words in commit messages: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileUrl": "7a52722f61ebbf6b67c3052225297ec62701debb/2016-01-01_2016-01-31_commit-words-data.json",
      "timePeriod": "2016-01-01_2016-01-31",
    },
    {
      "fileUrl": "7a52722f61ebbf6b67c3052225297ec62701debb/2016-02-01_2016-02-28_commit-words-data.json",
      "timePeriod": "2016-02-01_2016-02-28",
    },
  ],
  "dateRange": "2016-01-01_2016-02-28",
  "enabledDiagrams": [
    "commit-words",
  ],
  "id": "7a52722f61ebbf6b67c3052225297ec62701debb",
  "parameters": {
    "minWordCount": 2,
    "timeSplit": "eom",
  },
  "reportName": "commit-messages",
  "taskName": "commit-message-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;

exports[`Social analysis tasks developer-coupling-analysis when all analyses are supported for the VCS type publishes a report on ownership and communication coupling between main developers: 2016-01-01_2016-10-22_communication-network-data.json 1`] = `
[
  {
    "coupledDeveloper": {
      "name": "Dev2",
      "team": "Team 1",
    },
    "couplingStrength": 55,
    "developer": {
      "name": "Dev1",
      "team": "Team 1",
    },
    "sharedCommits": 65,
  },
  {
    "coupledDeveloper": {
      "name": "Dev1",
      "team": "Team 1",
    },
    "couplingStrength": 51,
    "developer": {
      "name": "Dev3",
      "team": "Team 2",
    },
    "sharedCommits": 194,
  },
  {
    "coupledDeveloper": {
      "name": "Dev5",
      "team": "Team 2",
    },
    "couplingStrength": 48,
    "developer": {
      "name": "Dev4",
      "team": "Team 2",
    },
    "sharedCommits": 62,
  },
]
`;

exports[`Social analysis tasks developer-coupling-analysis when all analyses are supported for the VCS type publishes a report on ownership and communication coupling between main developers: 2016-01-01_2016-10-22_main-dev-coupling-data.json 1`] = `
{
  "children": [
    {
      "authors": 4,
      "coupledEntries": [
        {
          "couplingDegree": 41,
          "path": "test_file4",
          "revisionsAvg": 22,
        },
        {
          "couplingDegree": 23,
          "path": "test_file3",
          "revisionsAvg": 12,
        },
      ],
      "mainDev": "Dev1",
      "ownership": 52,
      "path": "test_file1",
      "revisions": 54,
      "weight": 0.5934065934065934,
    },
    {
      "authors": 2,
      "coupledEntries": [
        {
          "couplingDegree": 66,
          "path": "test_file5",
          "revisionsAvg": 31,
        },
      ],
      "mainDev": "Dev2",
      "ownership": 83,
      "path": "test_file2",
      "revisions": 68,
      "weight": 0.7472527472527473,
    },
    {
      "authors": 3,
      "coupledEntries": [
        {
          "couplingDegree": 49,
          "path": "test_file5",
          "revisionsAvg": 29,
        },
        {
          "couplingDegree": 23,
          "path": "test_file1",
          "revisionsAvg": 12,
        },
      ],
      "mainDev": "Dev3",
      "ownership": 64,
      "path": "test_file3",
      "revisions": 24,
      "weight": 0.26373626373626374,
    },
    {
      "authors": 5,
      "coupledEntries": [
        {
          "couplingDegree": 41,
          "path": "test_file1",
          "revisionsAvg": 22,
        },
      ],
      "mainDev": "Dev5",
      "ownership": 75,
      "path": "test_file4",
      "revisions": 52,
      "weight": 0.5714285714285714,
    },
    {
      "authors": 6,
      "coupledEntries": [
        {
          "couplingDegree": 66,
          "path": "test_file2",
          "revisionsAvg": 31,
        },
        {
          "couplingDegree": 49,
          "path": "test_file3",
          "revisionsAvg": 29,
        },
      ],
      "mainDev": "Dev4",
      "ownership": 100,
      "path": "test_file5",
      "revisions": 91,
      "weight": 1,
    },
  ],
}
`;

exports[`Social analysis tasks developer-coupling-analysis when all analyses are supported for the VCS type publishes a report on ownership and communication coupling between main developers: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileType": "communication-network",
      "fileUrl": "543b3dfc5f7eea00986cf67fe3a738f9432366d5/2016-01-01_2016-10-22_communication-network-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
    {
      "fileType": "code-ownership",
      "fileUrl": "543b3dfc5f7eea00986cf67fe3a738f9432366d5/2016-01-01_2016-10-22_main-dev-coupling-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
  ],
  "dateRange": "2016-01-01_2016-10-22",
  "enabledDiagrams": [
    "main-developer-coupling",
    "communication-network",
  ],
  "id": "543b3dfc5f7eea00986cf67fe3a738f9432366d5",
  "parameters": {
    "maxCoupledFiles": 2,
  },
  "reportName": "developer-coupling",
  "taskName": "developer-coupling-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;

exports[`Social analysis tasks developer-coupling-analysis when the coupling analysis is not supported for the vcs type publishes a report on communication coupling only: 2016-01-01_2016-10-22_communication-network-data.json 1`] = `
[
  {
    "coupledDeveloper": {
      "name": "Dev2",
      "team": "Team 1",
    },
    "couplingStrength": 55,
    "developer": {
      "name": "Dev1",
      "team": "Team 1",
    },
    "sharedCommits": 65,
  },
  {
    "coupledDeveloper": {
      "name": "Dev1",
      "team": "Team 1",
    },
    "couplingStrength": 51,
    "developer": {
      "name": "Dev3",
      "team": "Team 2",
    },
    "sharedCommits": 194,
  },
  {
    "coupledDeveloper": {
      "name": "Dev5",
      "team": "Team 2",
    },
    "couplingStrength": 48,
    "developer": {
      "name": "Dev4",
      "team": "Team 2",
    },
    "sharedCommits": 62,
  },
]
`;

exports[`Social analysis tasks developer-coupling-analysis when the coupling analysis is not supported for the vcs type publishes a report on communication coupling only: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileType": "communication-network",
      "fileUrl": "543b3dfc5f7eea00986cf67fe3a738f9432366d5/2016-01-01_2016-10-22_communication-network-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
  ],
  "dateRange": "2016-01-01_2016-10-22",
  "enabledDiagrams": [
    "communication-network",
  ],
  "id": "543b3dfc5f7eea00986cf67fe3a738f9432366d5",
  "parameters": {
    "maxCoupledFiles": 2,
  },
  "reportName": "developer-coupling",
  "taskName": "developer-coupling-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;

exports[`Social analysis tasks developer-effort-analysis when no team information exists publishes only a report on the revisions distribution between developers: 2016-01-01_2016-10-22_developer-effort-data.json 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "name": "Dev1",
                  "ownership": 71,
                  "revisions": 5,
                },
                {
                  "name": "Dev2",
                  "ownership": 29,
                  "revisions": 2,
                },
              ],
              "name": "file1",
            },
          ],
          "name": "a",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "Dev1",
                  "ownership": 53,
                  "revisions": 8,
                },
                {
                  "name": "Dev3",
                  "ownership": 33,
                  "revisions": 5,
                },
                {
                  "name": "Dev4",
                  "ownership": 13,
                  "revisions": 2,
                },
              ],
              "name": "file2",
            },
          ],
          "name": "b",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "Dev5",
                  "ownership": 59,
                  "revisions": 10,
                },
                {
                  "name": "Dev with no team",
                  "ownership": 41,
                  "revisions": 7,
                },
              ],
              "name": "file3",
            },
          ],
          "name": "c",
        },
      ],
      "name": "test",
    },
  ],
}
`;

exports[`Social analysis tasks developer-effort-analysis when no team information exists publishes only a report on the revisions distribution between developers: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileType": "individual-effort",
      "fileUrl": "003a77e0e1ae9594f143f49d2b211269308c4489/2016-01-01_2016-10-22_developer-effort-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
  ],
  "dateRange": "2016-01-01_2016-10-22",
  "enabledDiagrams": [
    "individual-effort",
  ],
  "id": "003a77e0e1ae9594f143f49d2b211269308c4489",
  "parameters": {},
  "reportName": "developer-effort",
  "taskName": "developer-effort-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;

exports[`Social analysis tasks developer-effort-analysis when team information exists publishes reports on the revisions distribution between developers and between teams: 2016-01-01_2016-10-22_developer-effort-data.json 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "name": "Dev1",
                  "ownership": 71,
                  "revisions": 5,
                },
                {
                  "name": "Dev2",
                  "ownership": 29,
                  "revisions": 2,
                },
              ],
              "name": "file1",
            },
          ],
          "name": "a",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "Dev1",
                  "ownership": 53,
                  "revisions": 8,
                },
                {
                  "name": "Dev3",
                  "ownership": 33,
                  "revisions": 5,
                },
                {
                  "name": "Dev4",
                  "ownership": 13,
                  "revisions": 2,
                },
              ],
              "name": "file2",
            },
          ],
          "name": "b",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "Dev5",
                  "ownership": 59,
                  "revisions": 10,
                },
                {
                  "name": "Dev with no team",
                  "ownership": 41,
                  "revisions": 7,
                },
              ],
              "name": "file3",
            },
          ],
          "name": "c",
        },
      ],
      "name": "test",
    },
  ],
}
`;

exports[`Social analysis tasks developer-effort-analysis when team information exists publishes reports on the revisions distribution between developers and between teams: 2016-01-01_2016-10-22_team-effort-data.json 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "name": "Team 1",
                  "ownership": 100,
                  "revisions": 7,
                },
              ],
              "name": "file1",
            },
          ],
          "name": "a",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "Team 1",
                  "ownership": 53,
                  "revisions": 8,
                },
                {
                  "name": "Team 2",
                  "ownership": 47,
                  "revisions": 7,
                },
              ],
              "name": "file2",
            },
          ],
          "name": "b",
        },
        {
          "children": [
            {
              "children": [
                {
                  "name": "Team 2",
                  "ownership": 59,
                  "revisions": 10,
                },
                {
                  "name": "N/A (Dev with no team)",
                  "ownership": 41,
                  "revisions": 7,
                },
              ],
              "name": "file3",
            },
          ],
          "name": "c",
        },
      ],
      "name": "test",
    },
  ],
}
`;

exports[`Social analysis tasks developer-effort-analysis when team information exists publishes reports on the revisions distribution between developers and between teams: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileType": "individual-effort",
      "fileUrl": "003a77e0e1ae9594f143f49d2b211269308c4489/2016-01-01_2016-10-22_developer-effort-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
    {
      "fileType": "team-effort",
      "fileUrl": "003a77e0e1ae9594f143f49d2b211269308c4489/2016-01-01_2016-10-22_team-effort-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
  ],
  "dateRange": "2016-01-01_2016-10-22",
  "enabledDiagrams": [
    "individual-effort",
    "team-effort",
  ],
  "id": "003a77e0e1ae9594f143f49d2b211269308c4489",
  "parameters": {},
  "reportName": "developer-effort",
  "taskName": "developer-effort-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;

exports[`Social analysis tasks knowledge-map-analysis for a supported vcs type when no team information exists publishes a report on the main developer for each file: 2016-01-01_2016-10-22_knowledge-map-data.json 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "addedLines": 10,
                  "children": [],
                  "mainDev": "Dev1",
                  "name": "file1.rb",
                  "ownership": 53,
                  "sourceLines": 33,
                  "totalLines": 45,
                },
                {
                  "children": [
                    {
                      "addedLines": 9,
                      "children": [],
                      "mainDev": "Dev5",
                      "name": "file3.rb",
                      "ownership": 44,
                      "sourceLines": 15,
                      "totalLines": 21,
                    },
                  ],
                  "name": "models",
                },
              ],
              "name": "app",
            },
          ],
          "name": "ruby",
        },
        {
          "children": [
            {
              "children": [
                {
                  "addedLines": 23,
                  "children": [],
                  "mainDev": "Dev2",
                  "name": "file2.css",
                  "ownership": 26,
                  "sourceLines": 23,
                  "totalLines": 31,
                },
              ],
              "name": "styles",
            },
            {
              "children": [
                {
                  "addedLines": 16,
                  "children": [],
                  "mainDev": "Dev4",
                  "name": "file4.js",
                  "ownership": 29,
                  "sourceLines": 25,
                  "totalLines": 35,
                },
              ],
              "name": "js",
            },
          ],
          "name": "web",
        },
      ],
      "name": "test",
    },
  ],
}
`;

exports[`Social analysis tasks knowledge-map-analysis for a supported vcs type when no team information exists publishes a report on the main developer for each file: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileUrl": "4ba9307ceb8a58877cfad22bb9b4f7cf5bec32f8/2016-01-01_2016-10-22_knowledge-map-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
  ],
  "dateRange": "2016-01-01_2016-10-22",
  "enabledDiagrams": [
    "individual-knowledge-map",
  ],
  "id": "4ba9307ceb8a58877cfad22bb9b4f7cf5bec32f8",
  "parameters": {},
  "reportName": "knowledge-map",
  "taskName": "knowledge-map-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;

exports[`Social analysis tasks knowledge-map-analysis for a supported vcs type when team information exists publishes a report on the main developer for each file: 2016-01-01_2016-10-22_knowledge-map-data.json 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "addedLines": 10,
                  "children": [],
                  "mainDev": "Dev1",
                  "name": "file1.rb",
                  "ownership": 53,
                  "sourceLines": 33,
                  "team": "Team 1",
                  "totalLines": 45,
                },
                {
                  "children": [
                    {
                      "addedLines": 9,
                      "children": [],
                      "mainDev": "Dev5",
                      "name": "file3.rb",
                      "ownership": 44,
                      "sourceLines": 15,
                      "team": "Ex team",
                      "totalLines": 21,
                    },
                  ],
                  "name": "models",
                },
              ],
              "name": "app",
            },
          ],
          "name": "ruby",
        },
        {
          "children": [
            {
              "children": [
                {
                  "addedLines": 23,
                  "children": [],
                  "mainDev": "Dev2",
                  "name": "file2.css",
                  "ownership": 26,
                  "sourceLines": 23,
                  "team": "Team 1",
                  "totalLines": 31,
                },
              ],
              "name": "styles",
            },
            {
              "children": [
                {
                  "addedLines": 16,
                  "children": [],
                  "mainDev": "Dev4",
                  "name": "file4.js",
                  "ownership": 29,
                  "sourceLines": 25,
                  "team": "Team 2",
                  "totalLines": 35,
                },
              ],
              "name": "js",
            },
          ],
          "name": "web",
        },
      ],
      "name": "test",
    },
  ],
}
`;

exports[`Social analysis tasks knowledge-map-analysis for a supported vcs type when team information exists publishes a report on the main developer for each file: manifest 1`] = `
{
  "dataFiles": [
    {
      "fileUrl": "4ba9307ceb8a58877cfad22bb9b4f7cf5bec32f8/2016-01-01_2016-10-22_knowledge-map-data.json",
      "timePeriod": "2016-01-01_2016-10-22",
    },
  ],
  "dateRange": "2016-01-01_2016-10-22",
  "enabledDiagrams": [
    "individual-knowledge-map",
    "team-knowledge-map",
  ],
  "id": "4ba9307ceb8a58877cfad22bb9b4f7cf5bec32f8",
  "parameters": {},
  "reportName": "knowledge-map",
  "taskName": "knowledge-map-analysis",
  "time": "2016-10-22T10:00:00.000Z",
}
`;
